begin sum graph implementation, div overlap fix on #welcome, scroll fix

--- a/src/ScaleHD/genHTML/scalehd.css
+++ b/src/ScaleHD/genHTML/scalehd.css
@@ -218,6 +218,12 @@ a.sequence_sample_sublink:hover, a.sequence_sample_sublink:focus
 	width: 0px;
 }
 
+#welcome
+{
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
 .toTopButton
 {
   flex: 1 1 auto;
@@ -248,13 +254,28 @@ a.sequence_sample_sublink:hover, a.sequence_sample_sublink:focus
 	scrollbar-width: none; /*firefox*/
 	-ms-overflow-style: none; /*ie10+*/
 	background: #f5f5f5;
-	margin: 0 0 0 375px;
-	padding: 15px 12px;
+	margin: 0 30px 0 375px;
+	padding: 15px 12px 0 0;
 }
 
 #main-view::-webkit-scrollbar
 { /*webkit, obviously*/
 	width: 0px;
+}
+
+#chart-container
+{
+  width: 80%;
+  position: relative;
+  display: inline-block;
+  overflow: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+#chart-container::-webkit-scrollbar
+{
+  width: 0px;
 }
 
 a.footer
@@ -268,7 +289,9 @@ a.footer
 
 #footer
 {
-  position: absolute;
+  padding-top: 5%;
+  position: relative;
+  display: inline-block;
   bottom: 0%
 }
 
@@ -307,7 +330,7 @@ input[type='checkbox'] {
 }
 
 .lbl-toggle::before {
-  content: ' ';
+  content: '>'
   display: inline-block;
 
   border-top: 5px solid transparent;
